# transformer_from_scratch

./: .gitignore  LICENSE  Makefile  README.md  REPO_MODERNIZATION_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
blocks/: decoder_block.py  encoder_block.py
data/euro_parl_fr_en/: Europarl_Parallel_Corpus.html  english_tokeniser_0_epochs.pkl  french_tokeniser_50_epochs.pkl
data/europarl_fr_en/: english_tokeniser_100_epochs.pkl  english_tokeniser_50_epochs.pkl  french_tokeniser_0_epochs.pkl  french_tokeniser_100_epochs.pkl
embeddings/: positional_encoding.py  token_embeddings.py  token_positional.py
examples/: data_prep.py  download_data.py  train_fr_en.py  translate_fr_en.py
layers/: attention.py  feed_forward.py  layer_norm.py  multi_head_attention.py
models/: decoder.py  encoder.py  transformer.py
tests/: conftest.py  test_attention_and_transformer.py  test_data_handler.py  test_positional_encoding_and_tokeniser.py
utils/: data_utils.py  file_utils.py  logging_utils.py  tokeniser.py  train_utils.py
utils/metrics/: bleu.py
